exports[`test Displays controversial question. 1`] = `
<div>
  <div
    className="row">
    <div
      className="col-xs-12">
      <h2
        className="controversy">
        Game Changer!
      </h2>
    </div>
  </div>
  <div
    className="row">
    <div
      className="col-xs-12 col-sm-2">
      <h3
        className="time">
        <small>
          Build Up
        </small>
      </h3>
    </div>
    <div
      className="col-xs-12 col-sm-10">
      <h3>
        Is this a good test?
      </h3>
    </div>
    <div
      className="col-xs-12 col-sm-offset-2 col-sm-10">
      <div>
        <div
          className="spacer" />
        <a
          className="action-button yes animate button"
          onClick={[Function]}>
          Yes
        </a>
        <a
          className="action-button no animate button"
          onClick={[Function]}>
          No
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Displays question with description. 1`] = `
<div>
  <div
    className="row">
    <div
      className="col-xs-12">
      <h2
        className="controversy">
        Game Changer!
      </h2>
    </div>
  </div>
  <div
    className="row">
    <div
      className="col-xs-12 col-sm-2">
      <h3
        className="time">
        <small>
          Build Up
        </small>
      </h3>
    </div>
    <div
      className="col-xs-12 col-sm-10">
      <h3>
        Is this a good test?
      </h3>
      <h4>
        <small>
          I\'m really not sure anymore.
        </small>
      </h4>
    </div>
    <div
      className="col-xs-12 col-sm-offset-2 col-sm-10">
      <div>
        <div
          className="spacer" />
        <a
          className="action-button yes animate button"
          onClick={[Function]}>
          Yes
        </a>
        <a
          className="action-button no animate button"
          onClick={[Function]}>
          No
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Displays question with referee decision. 1`] = `
<div>
  <div
    className="row">
    <div
      className="col-xs-12 col-sm-2">
      <h3
        className="time">
        <small>
          Build Up
        </small>
      </h3>
    </div>
    <div
      className="col-xs-12 col-sm-10">
      <h3>
        Is this a good test?
      </h3>
      <h4>
        REFEREE\'S CALL: 
        <span
          className="decision">
          Yes
        </span>
      </h4>
    </div>
    <div
      className="col-xs-12 col-sm-offset-2 col-sm-10">
      <div>
        <div
          className="spacer" />
        <a
          className="action-button yes animate button"
          onClick={[Function]}>
          Yes
        </a>
        <a
          className="action-button no animate button"
          onClick={[Function]}>
          No
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Displays vanilla question. 1`] = `
<div>
  <div
    className="row">
    <div
      className="col-xs-12 col-sm-2">
      <h3
        className="time">
        <small>
          Build Up
        </small>
      </h3>
    </div>
    <div
      className="col-xs-12 col-sm-10">
      <h3>
        Is this a good test?
      </h3>
    </div>
    <div
      className="col-xs-12 col-sm-offset-2 col-sm-10">
      <div>
        <div
          className="spacer" />
        <a
          className="action-button yes animate button"
          onClick={[Function]}>
          Yes
        </a>
        <a
          className="action-button no animate button"
          onClick={[Function]}>
          No
        </a>
      </div>
    </div>
  </div>
</div>
`;
